Updated Manifest for widgets

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,16 @@
         <!-- Points to searchable activity so the whole app can invoke search. -->
         <meta-data android:name="android.app.default_searchable"
                    android:value=".QuoteDictionary" />
+        
+        <receiver android:name="SearchSpeareWidgetProvider" >
+    	<intent-filter>
+        	<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    	</intent-filter>
+    
+    <meta-data android:name="android.appwidget.provider"
+               android:resource="@xml/searchspeare_appwidget_info" />
+    
+</receiver>
 
     </application>
 </manifest>
