--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,7 +18,8 @@
 
         <!-- The default activity of the app; displays search results. -->
         <activity android:name=".Searchspeare"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleTop"
+                   android:configChanges="orientation|screenSize" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +39,8 @@
         </activity>
 
         <!-- Displays the quote and its location. -->
-        <activity android:name=".QuoteActivity" />
+        <activity android:name=".QuoteActivity" 
+             android:configChanges="orientation|screenSize"/>
 
         <provider android:name=".QuoteProvider"
                 android:authorities="com.hopps.bob.searchspeare.DictionaryProvider"
@@ -48,6 +50,16 @@
         <!-- Points to searchable activity so the whole app can invoke search. -->
         <meta-data android:name="android.app.default_searchable"
                    android:value=".QuoteDictionary" />
+        
+        <receiver android:name="SearchSpeareWidgetProvider" >
+    	<intent-filter>
+        	<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    	</intent-filter>
+    
+    <meta-data android:name="android.appwidget.provider"
+               android:resource="@xml/searchspeare_appwidget_info" />
+    
+</receiver>
 
     </application>
 </manifest>
